--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,11 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.1"
+  "commond": {
+    "publish": {
+      "npmClient": "npm",
+      "registry": "https://registry.npmjs.org"
+    }
+  },
+  "version": "independent"
 }
