--- a/packages/nail-ui/package.json
+++ b/packages/nail-ui/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "a135c5568e43c10eea29ea198d17f24778e21713"
 }
