--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "component"
   ],
   "author": "dingziqi <dingziqi_xtu@sina.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/dingziqi/nail/issues"
   },
