--- a/packages/mecha-ui/package.json
+++ b/packages/mecha-ui/package.json
@@ -11,5 +11,17 @@
   "gitHead": "f721613e46e6a16db27a4702457904d88db3be33",
   "publishConfig": {
     "access": "public"
+  },
+  "peerDependencies": {
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
